fix video hero banner mobile height + nav mobile gap fix

--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -19,7 +19,7 @@ body.overflow-hidden-all #main-collection-filters {
     border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.1);
   }
   #main-collection-filters {
-    top: 98px;
+    top: 92px;
   }
 }
 
